# babyflow

./: Cargo.toml
benches/: fork_join.rs  identity.rs
src/: babyflow.rs  babyflow2.rs  datalog.rs  main.rs  parser.rs  query.rs
src/babyflow/: mod.rs  query.rs
src/testdata/datalog/: datalog
src/testdata/parse/: parse
